apps/teamplan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teamplan
  labels:
    app.kubernetes.io/name: teamplan
