apps/teamplan/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamplan
  namespace: teamplan
  labels:
    app: teamplan
    app.kubernetes.io/name: teamplan
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: teamplan
