apps/teamplan/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teamplan
  namespace: teamplan
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teamplan.thiemo.click`)
      kind: Rule
      services:
        - name: teamplan
          port: 80
  tls:
    secretName: teamplan-tls
